fix wc3 validator errors 2

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
                 <div class="catalog__item" data-category="mushrooms">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/1.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/1.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/1.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/1.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Салями</h3>
@@ -121,8 +121,8 @@
                 <div class="catalog__item" data-category="meat">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/2.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/2.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/2.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/2.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Хит</h3>
@@ -148,8 +148,8 @@
                 <div class="catalog__item" data-category="cheese">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/3.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/3.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/3.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/3.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Ветчина-грибы</h3>
@@ -175,8 +175,8 @@
                 <div class="catalog__item" data-category="cheese">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/4.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/4.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/4.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/4.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Карбонара</h3>
@@ -202,8 +202,8 @@
                 <div class="catalog__item" data-category="mushrooms">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/5.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/5.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/5.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/5.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Фирменная</h3>
@@ -230,8 +230,8 @@
                 <div class="catalog__item" data-category="meat">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/6.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/6.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/6.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/6.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Ассорти</h3>
@@ -258,8 +258,8 @@
                 <div class="catalog__item" data-category="mushrooms">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/7.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/7.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/7.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/7.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Л-01</h3>
@@ -286,8 +286,8 @@
                 <div class="catalog__item" data-category="cheese">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/8.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/8.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/8.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/8.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Три сыра</h3>
@@ -313,8 +313,8 @@
                 <div class="catalog__item" data-category="meat">
                     <div class="product catalog__product">
                         <picture>
-                            <source type="image/webp" data-srcset="img/section-catalog/9.webp"/>
-                            <img class="product__img lazy" data-src="img/section-catalog/9.jpg" alt=""/>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/9.webp"/>
+                            <img class="product__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/9.jpg" alt=""/>
                         </picture>
                         <div class="product__content">
                             <h3 class="product__title">Мясная</h3>
@@ -344,8 +344,8 @@
     <!-- section-about -->
     <section class="section section-about">
         <picture>
-            <source type="image/webp" data-srcset="img/section-about/bg.jpg.webp"/>
-            <img class="section-about__img lazy" data-src="img/section-about/bg.jpg.jpg" alt=""/>
+            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-about/bg.jpg.webp"/>
+            <img class="section-about__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-about/bg.jpg.jpg" alt=""/>
         </picture>
         <div class="container section-about__container">
             <div class="section-about__content">
@@ -498,10 +498,13 @@
                     <h2 class="page-title popup__title">Заполните форму</h2>
                     <p class="popup__subtitle popup__subtitle--order">Мы привезем вам горячую пиццу за 50 минут</p>
                     <div class="order">
-                        <img class="order__img" src="img/section-catalog/1.jpg" alt="">
+                        <picture>
+                            <source type="image/webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-srcset="img/section-catalog/1.webp"/>
+                            <img class="order__img lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="img/section-catalog/1.jpg" alt=""/>
+                        </picture>
                         <h3 class="order__title">
-                            <span class="order-product-title">Салями</span>
-                            <span class="order-product-price">850</span> &#8381;
+                            <span class="order-product-title"></span>
+                            <span class="order-product-price"></span> &#8381;
                         </h3>
                         <p class="order__size">35 см</p>
 
