--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>PizzaTime</title>
+    <meta name="description" content="PizzaTime — Лучшая пицца в Москве от итальянского повара">
+    <meta name="keywords" content="пицца">
+    <meta property="og:title" content="PizzaTime"/>
+    <meta property="og:description" content="PizzaTime — Лучшая пицца в Москве от итальянского повара"/>
+    <meta property="og:image" content="img/section-top/header__bg-img.jpg"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>PizzaTime — Лучшая пицца в Москве от итальянского повара</title>
 </head>
 
 <body>
